--- a/src/components/Basket/BasketItemList/BasketItemList.module.scss
+++ b/src/components/Basket/BasketItemList/BasketItemList.module.scss
@@ -32,7 +32,7 @@
 
   .basketCrossBtn {
     height: 22px;
-    width: 22px;
+    width: 23px;
     top: -10px;
     right: -10px;
     position: relative;
