--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -36,6 +36,10 @@
     width: 29px;
     height: 22px;
     display: none;
+    margin-left: 26px;
+    @media (max-width: variables.$mobile) {
+      margin-left: 15px;
+    }
     @include mixins.backgr('../../assets/svg/burger.svg');
 
     @media (max-width: variables.$tablet) {
@@ -45,12 +49,7 @@
 
   .headerButtons {
     display: flex;
-    gap: 26px;
     align-items: center;
-
-    @media (max-width: variables.$mobile) {
-      gap: 15px;
-    }
   }
 
   .headerBasketContainer {
@@ -59,8 +58,8 @@
     position: relative;
 
     .headerBasket {
-      width: 24px;
       height: 21px;
+      width: 24px;
       margin-top: 4px;
       @include mixins.backgr('../../assets/svg/shopping_basket.svg');
     }
